fix bugs,basic level testing and add client-auth middle ware

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ PORT=8003
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL=postgresql://myuser:mypassword@localhost:5432/AaaS?schema=rbac_schema
+JWT_CLIENT_SECRET=some_login_in_system@2386
