Add all service and standerize response

--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ PORT=8003
 # The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres 
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
-
-DATABASE_URL=postgresql://myuser:mypassword@localhost:5432/AaaS?schema=rbac_schema
+DATABASE_URL=postgresql://myuser:mypassword@local_postgres:5432/AaaS?schema=rbac_schema
 JWT_CLIENT_SECRET=some_login_in_system@2386
+USER_SERVICE_URL="http://user-service:8002"
+TOKEN_SERVICE_URL="http://token-service:8001"
+RBAC_SERVICE_URL="http://rbac-service:8003"
