--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   # ---------------------------
   client-service:
     container_name: client-service
-    build: ./auth-service
+    build: ./client-service
     env_file:
       - .env
     ports:
