--- a/token-service/Dockerfile
+++ b/token-service/Dockerfile
@@ -1,8 +1,14 @@
-FROM node:18
+FROM node:18-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
+
 RUN npx prisma generate
-EXPOSE 8001
-CMD ["npm", "start"]
+
+EXPOSE 3000
+
+CMD ["sh", "-c", "npx prisma migrate deploy && npm start"]
